--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
     "username": "postgres",
-    "password": "ggwp",
+    "password": "perm801226",
     "database": "dima",
     "host": "127.0.0.1",
     "port": "5432",
