--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "bcrypt-nodejs": "^0.0.3",
     "body-parser": "^1.19.2",
     "cors": "^2.8.5",
+    "ejs": "^3.1.7",
     "express": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
     "passport": "^0.5.2",
