--- a/package.json
+++ b/package.json
@@ -26,11 +26,16 @@
     "ejs": "^3.1.7",
     "express": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
+    "nodemon": "^2.0.18",
     "os": "^0.1.2",
     "passport": "^0.5.2",
     "passport-jwt": "^4.0.0",
     "pg": "^8.7.3",
-    "sequelize": "^6.19.0",
+    "sequelize": "^6.21.1",
     "socket.io": "^4.5.1"
+  },
+  "keywords": [],
+  "devDependencies": {
+    "sequelize-cli": "^6.4.1"
   }
 }
